--- a/src/widgets/board/ui/Board/Board.module.scss
+++ b/src/widgets/board/ui/Board/Board.module.scss
@@ -1,3 +1,3 @@
 .board {
-  @apply flex overflow-auto border-2 border-gray-light bg-white p-2 dark:border-gray dark:bg-black;
+  @apply flex max-h-full w-11/12 max-w-fit items-start justify-start overflow-auto border-2 border-gray-light bg-white p-2 dark:border-gray dark:bg-black;
 }
